--- a/angular-frontend/app/index.html
+++ b/angular-frontend/app/index.html
@@ -21,6 +21,15 @@
 <body ng-app="chatApp">
 <h1>Angular Chatter</h1>
 
+<!-- hangman game controller -->
+<div class='container'>
+  <div ng-controller='HangmanCtrl'>
+    <img ng-src="images/{{turn}}.png" alt="IMAGE_HERE">
+    <h1>{{word}}</h1>
+  </div>
+</div>
+
+<!-- socket interface -->
 <div class='container'>
   <div ng-controller='SocketCtrl'>
     You are known as: <span ng-bind="nickName"></span>.<br/>Change your nickname with <code>/nick [yourNewNick]</code>
@@ -66,14 +75,18 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-socket-io/socket.js"></script>
+<script src="bower_components/fingerprintjs2/fingerprintjs2.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
+<script src="scripts/services/hangmanUserCommuncations.js"></script>
 <script src="scripts/controllers/socket.js"></script>
+<script src="scripts/controllers/hangman.js"></script>
 <script src="scripts/services/socket.js"></script>
 <script src="scripts/services/messageformatter.js"></script>
+
 <script src="scripts/directives/chatbox.js"></script>
 <!-- endbuild -->
 </body>
