--- a/angular-frontend/app/index.html
+++ b/angular-frontend/app/index.html
@@ -2,7 +2,8 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <!--<html class="no-js" manifest="images.appcache">--> <!--<![endif]-->
+<html class="no-js">
 <head>
 <meta charset="utf-8">
 <title></title>
@@ -80,7 +81,7 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-socket-io/socket.js"></script>
-<script src="bower_components/fingerprintjs2/fingerprintjs2.js"></script>
+<!--<script src="bower_components/fingerprintjs2/fingerprintjs2.js"></script>-->
 <!-- endbower -->
 <!-- endbuild -->
 
