--- a/angular-frontend/app/index.html
+++ b/angular-frontend/app/index.html
@@ -2,8 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <!--<html class="no-js" manifest="images.appcache">--> <!--<![endif]-->
-<html class="no-js">
+<!--[if gt IE 8]><!--> <html class="no-js" manifest="images.appcache"> <!--<![endif]-->
 <head>
 <meta charset="utf-8">
 <title></title>
